--- a/404.html
+++ b/404.html
@@ -5,25 +5,25 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DkKI25ls.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CwEzFfhO.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BvLojk_z.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Be-PGXVE.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.DNj0MHm9.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C_NnMxRy.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.HFzBgbtX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BF3lE5Bd.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BoevOnbW.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cclp4MBs.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1mir1rl = {
+					__sveltekit_f1h920 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DkKI25ls.js"),
-						import("/_app/immutable/entry/app.Be-PGXVE.js")
+						import("/_app/immutable/entry/start.C_NnMxRy.js"),
+						import("/_app/immutable/entry/app.BoevOnbW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
