--- a/404.html
+++ b/404.html
@@ -5,25 +5,25 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.C_NnMxRy.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.HFzBgbtX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BF3lE5Bd.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BoevOnbW.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.Cclp4MBs.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C7P-oDk2.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.C5xp-JQU.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.CLOlenSg.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DSCQ5fo0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.7Ms6IDg1.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_f1h920 = {
+					__sveltekit_5hgmcb = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.C_NnMxRy.js"),
-						import("/_app/immutable/entry/app.BoevOnbW.js")
+						import("/_app/immutable/entry/start.C7P-oDk2.js"),
+						import("/_app/immutable/entry/app.DSCQ5fo0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
