--- a/404.html
+++ b/404.html
@@ -5,25 +5,25 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.ChaLkKG6.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CQQk7Lmq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CYtGVyxI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DDhd_IFt.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.9YoBh8nY.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BU-dVgeH.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.D-0ZSoqD.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Cove0R55.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CHXS9Zgj.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_121n9gb = {
+					__sveltekit_10850ol = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.ChaLkKG6.js"),
-						import("/_app/immutable/entry/app.BU-dVgeH.js")
+						import("/_app/immutable/entry/start.CYtGVyxI.js"),
+						import("/_app/immutable/entry/app.Cove0R55.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
