--- a/404.html
+++ b/404.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D3VPmtbT.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BS5NMGGp.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DzoXZEU5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BfpxcpYy.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.CUGVr-Db.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.kPql2Zvh.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D0kJS957.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C8aoM25V.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.xUoYV6sB.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_7upixj = {
+					__sveltekit_116hos4 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D3VPmtbT.js"),
-						import("/_app/immutable/entry/app.D0kJS957.js")
+						import("/_app/immutable/entry/start.DzoXZEU5.js"),
+						import("/_app/immutable/entry/app.C8aoM25V.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
