--- a/404.html
+++ b/404.html
@@ -5,26 +5,26 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Cfie4PUt.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.wHSqn4l_.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CaQOryBJ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DvQg-YHd.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.CUGVr-Db.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.kPql2Zvh.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Dqcs_hzq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DmVjZHJn.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.xUoYV6sB.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1enbu1n = {
+					__sveltekit_7cvp0w = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Cfie4PUt.js"),
-						import("/_app/immutable/entry/app.Dqcs_hzq.js")
+						import("/_app/immutable/entry/start.CaQOryBJ.js"),
+						import("/_app/immutable/entry/app.DmVjZHJn.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
